fix: width on smaller screens

--- a/src/partials/header/_header.scss
+++ b/src/partials/header/_header.scss
@@ -80,4 +80,14 @@
       display: none;
     }
   }
+
+  @include mobile {
+    .card {
+      padding: 32px 16px;
+    }
+
+    &-img {
+      margin-right: 16px;
+    }
+  }
 }
